# pyscnomics

./: .gitignore  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE  PySC_23-31. OPL Rantau Bais.xlsb  README.md  W1.xlsb  Workbook CR_Filled_Good.xlsb  Workbook CR_Filled_Good_Mas Z.xlsb  Workbook CR_Filled_Good_Mas Zuher.xlsb  Workbook GS_Filled_Good.xlsb  Workbook GS_Filled_Good_Mas Zuher.xlsb  Workbook Transition_Good.xlsb  Workbook.xlsb  Workbook_Filled CR.xlsb  Workbook_Filled CR_Conda.xlsb  Workbook_Filled CR_Test.xlsb  Workbook_Filled Trans.xlsb  cert.pem  gunicorn_start  jdata.py  key.pem  main.py  output_log.txt  payload.json  payload_v2.json  pscExtractor.py  psc_logger.py  pyproject.toml  requirements.txt  requirements2.txt  router.py  sandboxing.py  setup.cfg  summaries.py  version.json
.github/workflows/: python-publish.yml
docs/: Makefile
docs/source/: conf.py  index.rst
psc-schema/: asrcost-schema.json  capcost-schema.json  case-schema.json  casecombd-schema.json  casecompd-schema.json  caseincrd-schema.json  coscost-schema.json  costrec-schema.json  dmo-schema.json  fiscal-schema.json  gencfg-schema.json  gs-schema-v2.json  gs-schema.json  intangcost-schema.json  lbtcost-schema.json  liftingd-schema.json  liftingh-schema.json  montecfg-schema.json  monteoutd-schema.json  monteparam-schema.json  montesummd-schema.json  opexcost-schema.json  optimcfg-schema.json  optimd-schema.json  project-schema-v2.json  project-schema.json  senscfg-schema.json
pyscnomics/: Workbook.xlsb  Workbook.xlsm  __init__.py  datasets.py  disposable.py  disposable_1.py  disposable_2.py  disposable_3.py  example.py  main.py  payload_baseproject_uncertainty.json  poolData.py  pyscnomics_cli.py  run.py  run_json.py  run_optimization.py  run_sensitivity.py  run_standard.py  run_uncertainty.py  sandboxing.py
pyscnomics/Optimize/: __init__.py  optimization.py  sensitivity.py  uncertainty.py
pyscnomics/api/: adapter.py  app.yaml  converter.py  main.py  payload_sample.json  payload_sample_1.json  payload_sample_2.json  payload_sample_3.json  router.py
pyscnomics/contracts/: __init__.py  costrecovery.py  grossplit.py  helper_costrecovery.py  project.py  psc_tools.py  sandbox_gs.py  transition.py
pyscnomics/dataset/: CR_Gas.json  Case00A.json  __init__.py  case0.py  case1.json  case1.py  case2.json  case2.py  case3.json  case4.json  case5_transition.json  case_00.py  case_00A.json  case_00A.py  case_00B.py  case_01.py  case_02.py  case_03.py  case_04.py  case_xx.py  cost_recovery.json  duri_field.json  gas_real.json  gross_split.json  medium_oil.json  medium_oil_2.json  object_sample.py  poolData1.py  poolDataAsClass.py  sample.py  sample_refactored.py  sandbox.py  small_gas.json  small_gas_refactored.json  small_oil.json  small_oil_gas.json  te_pod1_field.json  test.json
pyscnomics/econ/: __init__.py  cashflow.py  costs.py  costs_tools.py  depreciation.py  indicator.py  limit.py  results.py  revenue.py  selection.py
pyscnomics/ecviz/: visualization.py
pyscnomics/io/: __init__.py  aggregator.py  arrange1.py  config.py  config1.py  getattr.py  parse.py  plot_generator.py  spreadsheet.py  spreadsheet1.py  test.py  write_excel.py
pyscnomics/optimize/: __init__.py  adjuster.py  decisiontree.py  optimization.py  optimization_transition.py  sensitivity.py  uncertainty.py
pyscnomics/tests_case_0/: test_baseproject_oil.py
pyscnomics/tools/: __init__.py  functools.py  helper.py  ltp.py  rpd.py  summarizer.py  summary.py  table.py  table_new.py
pyscnomics/validation/: helper_validation.py  preparation.py  test_case0_baseproject_oil.py  test_case_00.py  test_case_00A.py  test_case_01.py  test_case_02.py  test_case_04.py
sandbox/: sandbox.py  sandbox_adhim.py  sandbox_cr_case0.py  sandbox_cr_case1.py  sandbox_cr_case2.py  sandbox_cr_case3.py  sandbox_cr_case4.py  sandbox_cr_case5.py  sandbox_gs_case1.py  sandbox_sens.py  sandbox_transisi_cr_gs.py  sandbox_transisi_dataclass.py  sandbox_transition.py  taxes.py
static/: index.html
static/assets/: AppBarSearch-ChzdnnHf.css  AppBarSearch-IRlq3ZZU.js  AppNumberField.vue_vue_type_script_setup_true_lang-CmO9Er-7.js  DefaultLayoutWithHorizontalNav-Crr0GXt-.js  DefaultLayoutWithVerticalNav-CO6fYaSZ.js  Footer-e0EMPa9S.js  I18n.vue_vue_type_script_setup_true_lang-BKclCgj-.js  NavBarNotifications-z96HUFR7.js  (+79 more)
tests/: cost_recovery.json  gas_real.json  sandbox.py  test_asr.py  test_base_project_cost_total.py  test_base_project_fluid_classification.py  test_base_project_lifting_revenue.py  test_case1.py  test_case3.py  test_cost_of_sales.py  test_cost_recovery.py  test_cost_recovery_refactored.py  test_costrecovery.py  test_costrecovery_case0.py  test_costrecovery_case1.py  test_costrecovery_case2.py  test_costrecovery_case3.py  test_costs.py  test_depreciation.py  test_grosssplit.py  test_indicator.py  test_intangible.py  test_lbt.py  test_limit.py  test_npv_pot.py  test_opex.py  test_project.py  test_revenue.py  test_summarizer.py  test_tangible.py  tests_depreciation.py
(+25 files in other folders)
