[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscnomics"
version = "1.0.0"
license = {file = "LICENCE"}
description = "An economic engine for calculating PSC Scheme in Indonesia."
authors = [
    {name = "Aditya Dewanto Hartono", email = "adityadewanto@gmail.com"},
    {name = "Fajril Ambia", email = "fambia@skkmigas.go.id"},
    {name = "Iskandar Fahmi", email = "ifahmi@bpma.go.id"},
    {name = "Muhammad Adhim Mulia", email = "adhimmuliam@gmail.com"},
    {name = "Sudono", email = "sudono@gmail.com"},
    {name = "Zuher Syihab", email = "zuher.syihab@itb.ac.id"},
]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fajril/pyscnomics"
"Bug Tracker" = "https://github.com/fajril/pyscnomics/issues"
