[metadata]
name = pyscnomics
version = 0.9.9
author = Aditya Dewanto, Fajril Ambia, Iskandar Fahmi, Sudono, Zuher Syihab
author_email = adityadewanto@gmail.com, fambia@skkmigas.go.id, ifahmi@bpma.go.id, sudono@gmail.com, zuher.syihab@itb.ac.id
description = An economic engine for calculating PSC Scheme in Indonesia.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fajril/pyscnomics

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
install_requires =
    pyxirr
    dateutils