[metadata]
name = pyscnomics
version = 1.0.0
author = Aditya Dewanto, Fajril Ambia, Iskandar Fahmi, Muhammad Adhim Mulia, Sudono, Zuher Syihab
author_email = adityadewanto@gmail.com, fambia@skkmigas.go.id, ifahmi@bpma.go.id, adhimmuliam@gmail.com, sudono@gmail.com, zuher.syihab@itb.ac.id
description = An economic engine for calculating PSC Scheme in Indonesia.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fajril/pyscnomics

[options]
python_requires = >=3.11
packages = find:
include_package_data = true
install_requires =
    dateutils>=0.6.12
    matplotlib>=3.4.3
    pandas>=2.2.0
    pytest>=7.1.2
    pyxirr==0.9.2
    pyxlsb>=1.0.10
    scipy >=1.7.3
    xlwings>=0.24.8
